[package]
name = "mkfile"
version = "0.3.0"
edition = "2021"
authors = ["Alex Wanderman <58393741+AlexWanderman@users.noreply.github.com>"]
description = "CLI app for creating text files (with no external dependencies)."
repository = "https://github.com/AlexWanderman/mkfile"
license = "MIT"
categories = ["command-line-utilities"]
